--- a/src/ch/sample/view/CartridgeView.fxml
+++ b/src/ch/sample/view/CartridgeView.fxml
@@ -12,10 +12,10 @@
       <Button fx:id="buttonSave" layoutX="206.0" layoutY="104.0" mnemonicParsing="false" text="Сохранить" />
       <Label layoutX="14.0" layoutY="35.0" text="Инвентарный номер:" />
       <Label layoutX="14.0" layoutY="65.0" text="Модель картриджа:" />
-      <TextField disable="true" editable="false" layoutX="147.0" layoutY="30.0" prefHeight="25.0" prefWidth="90.0" />
-      <TextField disable="true" editable="false" layoutX="147.0" layoutY="60.0" prefHeight="25.0" prefWidth="90.0" />
-      <TextField layoutX="260.0" layoutY="60.0" prefHeight="25.0" prefWidth="90.0" />
-      <TextField layoutX="260.0" layoutY="30.0" prefHeight="25.0" prefWidth="90.0" />
+      <TextField fx:id="textField_CurrentNumber" disable="true" editable="false" layoutX="147.0" layoutY="30.0" prefHeight="25.0" prefWidth="90.0" />
+      <TextField fx:id="textField_CurrentModel" disable="true" editable="false" layoutX="147.0" layoutY="60.0" prefHeight="25.0" prefWidth="90.0" />
+      <TextField fx:id="textField_NewModel" layoutX="260.0" layoutY="60.0" prefHeight="25.0" prefWidth="90.0" />
+      <TextField fx:id="textField_NewNumber" layoutX="260.0" layoutY="30.0" prefHeight="25.0" prefWidth="90.0" />
       <Label alignment="CENTER" layoutX="147.0" layoutY="6.0" prefHeight="17.0" prefWidth="90.0" text="Текущие" />
       <Label alignment="CENTER" layoutX="260.0" layoutY="6.0" prefHeight="17.0" prefWidth="90.0" text="Новые" textAlignment="CENTER" />
    </children>
