--- a/src/ch/sample/resources/LayoutEdit.fxml
+++ b/src/ch/sample/resources/LayoutEdit.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -13,12 +14,12 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <TableView layoutX="193.0" layoutY="45.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="100.0">
+      <TableView fx:id="tableViewCartridges" layoutX="193.0" layoutY="45.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="100.0">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
          <columns>
-            <TableColumn editable="false" text="Картриджи" />
+            <TableColumn fx:id="columnCartridgeNumber" editable="false" text="Картриджи" />
          </columns>
       </TableView>
       <TableView layoutX="312.0" layoutY="45.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="120.0">
@@ -33,12 +34,13 @@
       <Button fx:id="buttonRemoveUser" layoutX="39.0" layoutY="245.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleRemoveUser" prefHeight="25.0" prefWidth="25.0" text="-" />
       <Button fx:id="buttonEditUser" layoutX="64.0" layoutY="245.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleEditUser" prefHeight="25.0" prefWidth="25.0" text="~" />
       <Label fx:id="labelText" layoutX="14.0" layoutY="14.0" text="Выберите таблицу:" />
-      <Button fx:id="buttonEditCartridge" layoutX="243.0" layoutY="245.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="~" />
-      <Button fx:id="buttonRemoveCartridge" layoutX="218.0" layoutY="245.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="-" />
-      <Button fx:id="buttonAddCartridge" layoutX="193.0" layoutY="245.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="+" />
+      <Button fx:id="buttonEditCartridge" layoutX="243.0" layoutY="245.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleEditCartridge" prefHeight="25.0" prefWidth="25.0" text="~" />
+      <Button fx:id="buttonRemoveCartridge" layoutX="218.0" layoutY="245.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleRemoveCartridge" prefHeight="25.0" prefWidth="25.0" text="-" />
+      <Button fx:id="buttonAddCartridge" layoutX="193.0" layoutY="245.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleAddCartridge" prefHeight="25.0" prefWidth="25.0" text="+" />
       <Button fx:id="buttonEditDefect" layoutX="362.0" layoutY="245.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="~" />
       <Button fx:id="buttonRemoveDefect" layoutX="337.0" layoutY="245.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="-" />
       <Button fx:id="buttonAddDefect" layoutX="312.0" layoutY="245.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="+" />
       <Button layoutX="13.0" layoutY="284.0" mnemonicParsing="false" onAction="#handleGetAllUsers" text="GetAll" />
+      <Button layoutX="194.0" layoutY="284.0" mnemonicParsing="false" onAction="#handleGetAllCartridges" text="GetAll" />
    </children>
 </AnchorPane>
