--- a/src/ch/sample/view/DefectView.fxml
+++ b/src/ch/sample/view/DefectView.fxml
@@ -8,11 +8,11 @@
 
 <AnchorPane prefHeight="127.0" prefWidth="287.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="buttonCancel" layoutX="215.0" layoutY="93.0" mnemonicParsing="false" text="Отмена" />
-      <Button fx:id="buttonSave" layoutX="129.0" layoutY="93.0" mnemonicParsing="false" text="Сохранить" />
-      <TextField disable="true" editable="false" layoutX="124.0" layoutY="24.0" />
-      <TextField layoutX="124.0" layoutY="58.0" />
       <Label layoutX="14.0" layoutY="28.0" text="Текущее название:" />
+      <TextField fx:id="textField_CurrentName" disable="true" editable="false" layoutX="124.0" layoutY="24.0" />
       <Label layoutX="20.0" layoutY="62.0" text="Новое название:" />
+      <TextField fx:id="textField_NewName" layoutX="124.0" layoutY="58.0" />
+      <Button fx:id="buttonSave" layoutX="129.0" layoutY="93.0" mnemonicParsing="false" onAction="#handleSave" text="Сохранить" />
+      <Button fx:id="buttonCancel" layoutX="215.0" layoutY="93.0" mnemonicParsing="false" onAction="#handleCancel" text="Отмена" />
    </children>
 </AnchorPane>
