--- a/src/ch/sample/resources/LayoutJournal.fxml
+++ b/src/ch/sample/resources/LayoutJournal.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="400.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.sample.controller.LayoutJournalController">
    <children>
       <SplitPane dividerPositions="0.75" layoutX="104.0" layoutY="55.0" orientation="VERTICAL" prefHeight="400.0" prefWidth="680.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -28,7 +28,7 @@
             </AnchorPane>
           <AnchorPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
+                  <Button layoutX="564.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleCreateNote" text="Создать запись" AnchorPane.rightAnchor="14.0" />
                </children>
             </AnchorPane>
         </items>
