ChoiceBox elements changed to ComboBox

--- a/src/ch/sample/resources/LayoutNote.fxml
+++ b/src/ch/sample/resources/LayoutNote.fxml
@@ -14,15 +14,15 @@
       <Label alignment="CENTER_RIGHT" layoutX="14.0" layoutY="44.0" prefHeight="17.0" prefWidth="69.0" text="Дата:" />
       <DatePicker layoutX="85.0" layoutY="40.0" prefHeight="25.0" prefWidth="150.0" />
       <Label alignment="CENTER_RIGHT" layoutX="14.0" layoutY="74.0" prefHeight="17.0" prefWidth="69.0" text="ФИО:" />
-      <ChoiceBox layoutX="85.0" layoutY="70.0" prefHeight="25.0" prefWidth="150.0" />
+      <ComboBox fx:id="comboBoxUsers" layoutX="85.0" layoutY="70.0" prefWidth="150.0" />
       <Label alignment="CENTER_RIGHT" layoutX="14.0" layoutY="104.0" prefHeight="17.0" prefWidth="69.0" text="Извлечен:" />
-      <ChoiceBox layoutX="85.0" layoutY="100.0" prefHeight="25.0" prefWidth="69.0" />
+      <ComboBox layoutX="85.0" layoutY="100.0" prefHeight="25.0" prefWidth="69.0" />
       <Label alignment="CENTER_RIGHT" layoutX="14.0" layoutY="134.0" prefHeight="17.0" prefWidth="69.0" text="Установлен:" />
-      <ChoiceBox layoutX="85.0" layoutY="130.0" prefHeight="25.0" prefWidth="69.0" />
+      <ComboBox layoutX="85.0" layoutY="130.0" prefHeight="25.0" prefWidth="69.0" />
       <Label alignment="CENTER_RIGHT" layoutX="14.0" layoutY="164.0" prefHeight="17.0" prefWidth="69.0" text="Инв. №:" />
-      <ChoiceBox layoutX="85.0" layoutY="160.0" prefHeight="25.0" prefWidth="69.0" />
-      <ChoiceBox layoutX="85.0" layoutY="190.0" prefHeight="25.0" prefWidth="150.0" />
+      <ComboBox layoutX="85.0" layoutY="160.0" prefHeight="25.0" prefWidth="69.0" />
       <Label alignment="CENTER_RIGHT" layoutX="14.0" layoutY="194.0" prefHeight="17.0" prefWidth="69.0" text="Причина:" />
+      <ComboBox layoutX="85.0" layoutY="190.0" prefWidth="150.0" />
       <Button layoutX="134.0" layoutY="232.0" mnemonicParsing="false" text="Записать" />
       <Button layoutX="205.0" layoutY="232.0" mnemonicParsing="false" text="Отмена" />
    </children>
