--- a/src/ch/sample/resources/LayoutJournal.fxml
+++ b/src/ch/sample/resources/LayoutJournal.fxml
@@ -28,7 +28,22 @@
             </AnchorPane>
           <AnchorPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <Button layoutX="564.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleCreateNote" text="Создать запись" AnchorPane.rightAnchor="14.0" />
+                  <Button layoutX="564.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleCreateNote" text="Создать запись" AnchorPane.rightAnchor="14.0" />
+                  <RadioButton layoutX="14.0" layoutY="14.0" mnemonicParsing="false" selected="true" text="Весь журнал">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="report" />
+                     </toggleGroup>
+                  </RadioButton>
+                  <RadioButton layoutX="14.0" layoutY="42.0" mnemonicParsing="false" text="Последние 10" toggleGroup="$report" />
+                  <RadioButton layoutX="14.0" layoutY="69.0" mnemonicParsing="false" text="Последние" toggleGroup="$report" />
+                  <RadioButton layoutX="170.0" layoutY="14.0" mnemonicParsing="false" text="За неделю" toggleGroup="$report" />
+                  <RadioButton layoutX="170.0" layoutY="42.0" mnemonicParsing="false" text="За месяц" toggleGroup="$report" />
+                  <RadioButton layoutX="170.0" layoutY="69.0" mnemonicParsing="false" text="За период c" toggleGroup="$report" />
+                  <TextField alignment="CENTER_RIGHT" layoutX="105.0" layoutY="65.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="25.0" prefWidth="42.0" text="50" />
+                  <Button layoutX="549.0" layoutY="65.0" mnemonicParsing="false" text="Обновить данные" />
+                  <DatePicker layoutX="263.0" layoutY="65.0" prefHeight="25.0" prefWidth="98.0" />
+                  <DatePicker layoutX="392.0" layoutY="65.0" prefHeight="25.0" prefWidth="98.0" />
+                  <Label layoutX="369.0" layoutY="69.0" text="по" />
                </children>
             </AnchorPane>
         </items>
