Generate first report to (.docx) file.

--- a/src/ch/sample/resources/LayoutJournal.fxml
+++ b/src/ch/sample/resources/LayoutJournal.fxml
@@ -44,6 +44,7 @@
                   <DatePicker fx:id="datePickerEndDate" layoutX="392.0" layoutY="65.0" prefHeight="25.0" prefWidth="98.0" />
                   <Button layoutX="549.0" layoutY="65.0" mnemonicParsing="false" onAction="#handleRefreshData" text="Обновить данные" />
                   <Button layoutX="564.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleCreateNote" text="Создать запись" AnchorPane.rightAnchor="14.0" />
+                  <Button fx:id="buttonJasper" layoutX="441.0" layoutY="19.0" mnemonicParsing="false" onAction="#handleJasper" text="Jasper" />
                </children>
             </AnchorPane>
         </items>
